--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -24,6 +24,9 @@
 				<a href="sovelluslogiikka/Pakka.html" target="classFrame">Pakka</a>
 			</li>
 						<li>
+				<a href="sovelluslogiikka/Peli.html" target="classFrame">Peli</a>
+			</li>
+						<li>
 				<a href="sovelluslogiikka/Peruspino.html" target="classFrame">Peruspino</a>
 			</li>
 						<li>
