--- a/dokumentaatio/checkstyle/xref/sovelluslogiikka/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/sovelluslogiikka/package-frame.html
@@ -28,6 +28,9 @@
             	<a href="Pakka.html" target="classFrame">Pakka</a>
           	</li>
           	          	<li>
+            	<a href="Peli.html" target="classFrame">Peli</a>
+          	</li>
+          	          	<li>
             	<a href="Peruspino.html" target="classFrame">Peruspino</a>
           	</li>
           	          	<li>
