--- a/dokumentaatio/checkstyle/xref/sovelluslogiikka/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/sovelluslogiikka/package-summary.html
@@ -57,6 +57,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="Peli.html" target="classFrame">Peli</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Peruspino.html" target="classFrame">Peruspino</a>
               		</td>
             	</tr>
