--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -15,6 +15,9 @@
 				<a href="sovelluslogiikka/Arpoja.html" target="classFrame">Arpoja</a>
 			</li>
 						<li>
+				<a href="kayttoliittyma/Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
+			</li>
+						<li>
 				<a href="sovelluslogiikka/Kortti.html" target="classFrame">Kortti</a>
 			</li>
 						<li>
@@ -22,6 +25,9 @@
 			</li>
 						<li>
 				<a href="sovelluslogiikka/Pakka.html" target="classFrame">Pakka</a>
+			</li>
+						<li>
+				<a href="kayttoliittyma/PakkaKuuntelija.html" target="classFrame">PakkaKuuntelija</a>
 			</li>
 						<li>
 				<a href="sovelluslogiikka/Peli.html" target="classFrame">Peli</a>
