--- a/dokumentaatio/checkstyle/xref/overview-frame.html
+++ b/dokumentaatio/checkstyle/xref/overview-frame.html
@@ -16,6 +16,9 @@
 
 		<ul>
 						<li>
+				<a href="kayttoliittyma/package-frame.html" target="packageFrame">kayttoliittyma</a>
+			</li>
+						<li>
 				<a href="sovelluslogiikka/package-frame.html" target="packageFrame">sovelluslogiikka</a>
 			</li>
 					</ul>
