--- a/dokumentaatio/checkstyle/xref/overview-summary.html
+++ b/dokumentaatio/checkstyle/xref/overview-summary.html
@@ -35,6 +35,11 @@
         	<tbody>
     	    	            	<tr>
               		<td>
+                		<a href="kayttoliittyma/package-summary.html">kayttoliittyma</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="sovelluslogiikka/package-summary.html">sovelluslogiikka</a>
               		</td>
             	</tr>
