--- a/dokumentaatio/checkstyle/xref/kayttoliittyma/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/kayttoliittyma/package-frame.html
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="JLabelKortti.html" target="classFrame">JLabelKortti</a>
+          	</li>
+          	          	<li>
             	<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
           	</li>
           	          	<li>
