--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -15,6 +15,9 @@
 				<a href="sovelluslogiikka/Arpoja.html" target="classFrame">Arpoja</a>
 			</li>
 						<li>
+				<a href="kayttoliittyma/JLabelKortti.html" target="classFrame">JLabelKortti</a>
+			</li>
+						<li>
 				<a href="kayttoliittyma/Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
 			</li>
 						<li>
