--- a/dokumentaatio/checkstyle/xref/kayttoliittyma/PakkaKuuntelija.html
+++ b/dokumentaatio/checkstyle/xref/kayttoliittyma/PakkaKuuntelija.html
@@ -20,17 +20,19 @@
 <a class="jxr_linenumber" name="L12" href="#L12">12</a>   
 <a class="jxr_linenumber" name="L13" href="#L13">13</a>  <strong class="jxr_keyword">import</strong> java.awt.event.ActionEvent;
 <a class="jxr_linenumber" name="L14" href="#L14">14</a>  <strong class="jxr_keyword">import</strong> java.awt.event.ActionListener;
-<a class="jxr_linenumber" name="L15" href="#L15">15</a>  <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">class</strong> <a href="../kayttoliittyma/PakkaKuuntelija.html">PakkaKuuntelija</a> <strong class="jxr_keyword">implements</strong> ActionListener {
+<a class="jxr_linenumber" name="L15" href="#L15">15</a>  <strong class="jxr_keyword">import</strong> sovelluslogiikka.Pakka;
 <a class="jxr_linenumber" name="L16" href="#L16">16</a>  
-<a class="jxr_linenumber" name="L17" href="#L17">17</a>  
+<a class="jxr_linenumber" name="L17" href="#L17">17</a>  <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">class</strong> <a href="../kayttoliittyma/PakkaKuuntelija.html">PakkaKuuntelija</a> <strong class="jxr_keyword">implements</strong> ActionListener {
 <a class="jxr_linenumber" name="L18" href="#L18">18</a>  
-<a class="jxr_linenumber" name="L19" href="#L19">19</a>      @Override
-<a class="jxr_linenumber" name="L20" href="#L20">20</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> actionPerformed(ActionEvent ae) {
-<a class="jxr_linenumber" name="L21" href="#L21">21</a>              
-<a class="jxr_linenumber" name="L22" href="#L22">22</a>          <em class="jxr_comment">/* näytä seuraava kortti */</em>
-<a class="jxr_linenumber" name="L23" href="#L23">23</a>          
-<a class="jxr_linenumber" name="L24" href="#L24">24</a>      }
-<a class="jxr_linenumber" name="L25" href="#L25">25</a>  }
+<a class="jxr_linenumber" name="L19" href="#L19">19</a>  
+<a class="jxr_linenumber" name="L20" href="#L20">20</a>  
+<a class="jxr_linenumber" name="L21" href="#L21">21</a>      @Override
+<a class="jxr_linenumber" name="L22" href="#L22">22</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> actionPerformed(ActionEvent ae) {
+<a class="jxr_linenumber" name="L23" href="#L23">23</a>              
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>          
+<a class="jxr_linenumber" name="L25" href="#L25">25</a>          
+<a class="jxr_linenumber" name="L26" href="#L26">26</a>      }
+<a class="jxr_linenumber" name="L27" href="#L27">27</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2017. All rights reserved.</div>
