--- a/dokumentaatio/checkstyle/xref/kayttoliittyma/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/kayttoliittyma/package-summary.html
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="JLabelKortti.html" target="classFrame">JLabelKortti</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
               		</td>
             	</tr>
