--- a/dokumentaatio/checkstyle/xref/kayttoliittyma/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/kayttoliittyma/package-frame.html
@@ -19,6 +19,12 @@
             	<a href="JLabelKortti.html" target="classFrame">JLabelKortti</a>
           	</li>
           	          	<li>
+            	<a href="JLayeredPanePerusPino.html" target="classFrame">JLayeredPanePerusPino</a>
+          	</li>
+          	          	<li>
+            	<a href="JLayeredPanePoytaPino.html" target="classFrame">JLayeredPanePoytaPino</a>
+          	</li>
+          	          	<li>
             	<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
           	</li>
           	          	<li>
