--- a/dokumentaatio/checkstyle/xref/kayttoliittyma/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/kayttoliittyma/package-summary.html
@@ -42,6 +42,16 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="JLayeredPanePerusPino.html" target="classFrame">JLayeredPanePerusPino</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="JLayeredPanePoytaPino.html" target="classFrame">JLayeredPanePoytaPino</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
               		</td>
             	</tr>
