--- a/dokumentaatio/pit/sovelluslogiikka/Main.java.html
+++ b/dokumentaatio/pit/sovelluslogiikka/Main.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_2'></a>
 <span>
 </span>
 </td>
@@ -92,166 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_3'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''>/*</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_4'/>
-4
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_4'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> * To change this license header, choose License Headers in Project Properties.</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_5'/>
-5
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_5'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> * To change this template file, choose Tools | Templates</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_6'/>
-6
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_6'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> * and open the template in the editor.</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_7'/>
-7
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_7'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> */</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_8'/>
-8
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_8'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''></span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_9'/>
-9
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_9'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''>/**</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_10'/>
-10
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_10'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> *</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_11'/>
-11
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_11'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> * @author eylenius</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_12'/>
-12
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_12'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''> */</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_13'/>
-13
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_13'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''></span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_14'/>
-14
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_3'></a>
 <span>
 </span>
 </td>
@@ -260,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_15'/>
-15
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_4'/>
+4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_4'></a>
 <span>
 </span>
 </td>
@@ -274,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_16'/>
-16
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_5'/>
+5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_5'></a>
 <span>
 </span>
 </td>
@@ -288,12 +134,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_17'/>
-17
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_6'/>
+6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_6'></a>
 <span>
 </span>
 </td>
@@ -302,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_18'/>
-18
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_7'/>
+7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_7'></a>
 <span>
 </span>
 </td>
@@ -316,12 +162,82 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_19'/>
-19
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_8'/>
+8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_8'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    /**</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_9'/>
+9
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_9'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>     * Main-metodi.</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_10'/>
+10
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_10'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>     * @param args </span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_11'/>
+11
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_11'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>     */</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_12'/>
+12
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_12'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    </span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_13'/>
+13
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_13'></a>
 <span>
 </span>
 </td>
@@ -330,12 +246,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_20'/>
-20
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_14'/>
+14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_14'></a>
 <span>
 </span>
 </td>
@@ -344,42 +260,28 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_21'/>
-21
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_15'/>
+15
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_21'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_15'>1</a>
 <span>
 1. main : removed call to javax/swing/SwingUtilities::invokeLater &rarr; NO_COVERAGE<br/>
 
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(kayttoliittyma);</span></pre></td></tr>
+<td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(kayttoliittyma);     </span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_22'/>
-22
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_16'/>
+16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_22'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''>        </span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_23'/>
-23
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_16'></a>
 <span>
 </span>
 </td>
@@ -388,12 +290,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_24'/>
-24
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_17'/>
+17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_17'></a>
 <span>
 </span>
 </td>
@@ -402,12 +304,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_25'/>
-25
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_18'/>
+18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_18'></a>
 <span>
 </span>
 </td>
@@ -416,12 +318,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6b8280e6_26'/>
-26
+<a name='org.pitest.mutationtest.report.html.SourceFile@3727f0ee_19'/>
+19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_19'></a>
 <span>
 </span>
 </td>
@@ -432,11 +334,11 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6b8280e6_21'>21</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3727f0ee_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6b8280e6_21'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3727f0ee_15'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>main<br/><b>Killed by : </b>none</span></span> removed call to javax/swing/SwingUtilities::invokeLater &rarr; NO_COVERAGE</p> 
 </td>
