--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -18,6 +18,12 @@
 				<a href="kayttoliittyma/JLabelKortti.html" target="classFrame">JLabelKortti</a>
 			</li>
 						<li>
+				<a href="kayttoliittyma/JLayeredPanePerusPino.html" target="classFrame">JLayeredPanePerusPino</a>
+			</li>
+						<li>
+				<a href="kayttoliittyma/JLayeredPanePoytaPino.html" target="classFrame">JLayeredPanePoytaPino</a>
+			</li>
+						<li>
 				<a href="kayttoliittyma/Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
 			</li>
 						<li>
